skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_live_feed_with_events.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&model)"
---
"┌ flightdeck-dashboard ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck  session demo-mixed  owner pi · %25 · /repo/demo  daemon: unknown  elapsed 2h25m  AH:1 ISS:1 WF:1  prompting:1 submitting:1 waiting:1   stale-warn 4m                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges │ Decisions │ Daemon                                                                                                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ activity feed · 6 events · noisy on ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Time     Source    !  Message                                                                                                                                                                         │"
"│03:09:55 ERR       ●  adapter timeout recovered                                                                                                                                                       │"
"│03:09:56 DECISION  ●  decision recorded: YES                                                                                                                                                          │"
"│03:09:57 STATE     •  ISS-7 state changed ready → prompting                                                                                                                                           │"
"│03:09:58 PROMPT    ●  prompt detected: merge-now                                                                                                                                                      │"
"│03:09:59 WAKE      •  wake delivered to master                                                                                                                                                        │"
"│03:10:00 DAEMON    ·  daemon heartbeat folded                                                                                                                                                         │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab/Shift+Tab tabs  j/k select  r reload  Ctrl+N noisy:on  / filter:off  Alt+M compact  ? help  q quit                                                                                                 "
"                                                                                                                                                                                                        "
