skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_merges.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&common::model_for_tab(Tab::Merges))"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  4m old  $0.00 · 0 turns · in 0 / out 0              moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ merge queue ───────────────────────────────────────────────────────────────────────────┐┌ conflicts & merges (issue mode) ───────────────────────────────────────────────────────────────────────────┐"
"│Merge queue                                                                             ││Conflict graph / PR overlap                                                                                 │"
"│1. VST-101  Needs input                                                                 ││computed 2026-05-15T10:04:00+00:00                                                                          │"
"│2. VST-102  unknown                                                                     ││                                                                                                            │"
"│                                                                                        ││VST-101 ↔ VST-102                                                                                           │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"│                                                                                        ││                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
